--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "k8s-dashboard-backend",
+  "name": "@k8s-dashboard/backend",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -13,13 +13,14 @@
   "dependencies": {
     "@elysiajs/cors": "^1.4.1",
     "@elysiajs/openapi": "^1.4.13",
-    "@sinclair/typebox": "^0.34.45",
+    "@sinclair/typebox": "catalog:",
     "better-auth": "latest",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^1.0.0-beta.11-fc31a5f",
     "drizzle-orm": "^1.0.0-beta.11-fc31a5f",
     "drizzle-typebox": "^1.0.0-beta.11-fc31a5f",
-    "elysia": "^1.4.22"
+    "elysia": "catalog:",
+    "pg": "^8.18.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
@@ -28,12 +29,10 @@
     "@types/pg": "^8.16.0",
     "bun-types": "latest"
   },
-  "module": "src/index.ts",
   "private": false,
   "peerDependencies": {
     "typescript": "^5.9.3"
   },
-  "overrides": {
-    "@sinclair/typebox": "0.34.45"
-  }
+  "module": "./src/index.ts",
+  "main": "./src/index.ts"
 }
