--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "thế-giới-gacha-gối-ôm",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite --host",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "better-auth": "^1.4.18",
-    "lucide-react": "^0.563.0",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "react-router-dom": "^7.13.0",
-    "zustand": "^5.0.11"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.14",
-    "@types/node": "^22.14.0",
-    "@types/react": "^19.2.13",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
+	"dependencies": {
+		"elysia": "^1.4.19",
+		"@sinclair/typebox": "0.34.45"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.10"
+	},
+	"workspaces": {
+		"packages": [
+			"./frontend",
+			"./backend"
+		],
+		"catalog": {
+			"@sinclair/typebox": "0.34.45",
+			"elysia": "^1.4.19"
+		}
+	},
+	"overrides": {
+		"@sinclair/typebox": "0.34.45"
+	}
 }
