fix(project): minor fixes

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@k8s-dashboard/backend",
+  "name": "cac-backend",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "bun --watch src/index.ts",
-    "build": "bun build src/index.ts --compile --minify --target bun --outdir dist",
+    "build": "bun build src/index.ts --minify --target bun --outdir dist",
     "start": "bun dist/index.js",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
