--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,9 @@
+NODE_ENV=your_node_env
+BETTER_AUTH_SECRET=your_better_auth_secret
+DATABASE_URL=your_database_url
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
-BETTER_AUTH_SECRET=your_better_auth_secret
-DISCORD_CLIENT_SECRET=your_discord_client_secret
 DISCORD_CLIENT_ID=your_discord_client_id
-DATABASE_URL=your_database_url
+DISCORD_CLIENT_SECRET=your_discord_client_secret
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
