--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "private": true,
+  "name": "cac-frontend",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "build": "react-router build",
@@ -18,7 +18,7 @@
     "react-dom": "^19.2.4",
     "react-router": "7.12.0",
     "zustand": "^5.0.11",
-    "@k8s-dashboard/backend": "workspace:*",
+    "cac-backend": "workspace:*",
     "@sinclair/typebox": "catalog:",
     "@elysiajs/eden": "^1.4.6"
 
